chore: replace user PNG logo with generated SVG logo and update template

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,8 @@
   <aside class="left">
     <!-- Top-left brand (logo + name) -->
     <div class="top-left-brand">
-      <img src="assets/logo.png" alt="Prodmaster logo" class="logo" />
+      <!-- use SVG logo (auto-scalable and crisp) -->
+      <img src="assets/logo.svg" alt="Prodmaster logo" class="logo" />
       <div class="brand">
         <div class="name">Prodmaster</div>
         <div class="slogan">Manufacturing Excellence!</div>
